# import-lens

./: .dockerignore  .gitignore  .gitmessage  .importlensignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile.build  Dockerfile.cross  README.md  biome.json  cliff.toml  clippy.toml  compose.yaml  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.test.json  tsdown.config.ts
.agents/rules/: instructions.md
.claude/agents/: finder.md  navigator-lite.md  navigator.md  skeptic-max.md  skeptic.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  commit-messages.yml  release.yml  validate.yml
cli/: importlens.mjs
daemon/: Cargo.toml
daemon/src/: analysis_flight.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  prefetch.rs  registry.rs  service.rs  time.rs
daemon/src/cache/: budget.rs  disk.rs  key.rs  memory.rs  mod.rs  project.rs  recency.rs
daemon/src/candidate/: entry.rs  mod.rs  plugin.rs
daemon/src/document/: completion.rs  ignore.rs  imports.rs  mod.rs  package_json.rs  positions.rs  script_regions.rs  specifier.rs
daemon/src/engine/: adapter.rs  asset_classifier.rs  asset_input.rs  boundary.rs  budget.rs  dependency_paths.rs  entry.rs  limits.rs  mod.rs  plugin.rs  scheduling.rs
daemon/src/ipc/: codec.rs  protocol.rs  server.rs
daemon/src/pipeline/: analyze.rs  asset_boundary.rs  asset_budget.rs  assets.rs  build_memo.rs  bundle.rs  cjs.rs  cjs_scan.rs  compress.rs  css_dependencies.rs  export_list.rs  fallback.rs  file_size.rs  file_size_cache.rs  full_package.rs  graph.rs  minify.rs  mod.rs  native_binary.rs  node_builtins.rs  reachability.rs  replacements.rs  resolver.rs  stage.rs  types_only.rs  util.rs
daemon/src/registry/: cache.rs  client.rs  constants.rs  executor.rs  mod.rs  service.rs  types.rs
daemon/src/report/: executor.rs  mod.rs  model.rs  scanner.rs
daemon/tests/: analyze.rs  asset_freshness.rs  asset_resource_limit.rs  bundle.rs  cache_disk.rs  cache_identity.rs  cache_key.rs  candidate_badges.rs  candidate_matrix.rs  candidate_packages.rs  candidate_performance.rs  compress.rs  direct_asset_source_limit.rs  document_analysis.rs  engine_boundary.rs  engine_failure_stage.rs  engine_freshness.rs  engine_resolution.rs  enumerate.rs  export_list_memo.rs  file_size_runtime.rs  fixtures.rs  freshness_core.rs  full_package_memo.rs  graph.rs  graph_source_limit.rs  ipc_codec.rs  lifecycle.rs  logging.rs  memory_cache.rs  panic_isolation.rs  performance.rs  prefetch.rs  project_cache.rs  registry.rs  registry_cache.rs  report.rs  resolver.rs  result_freshness.rs  review_repros.rs  (+2 more)
daemon/tests/common/: mod.rs
daemon/tests/fixtures/: README.md
daemon/tests/unit/: cache_budget_progress.rs  cache_disk_test_support.rs  cache_memory_flush.rs  ipc_server_swr.rs  ipc_server_teardown.rs  project_cache_lifecycle.rs  project_cache_maintenance.rs  service_registry_budget.rs  service_swr.rs
docs/: ImportLens-SRS.md  Weakness-and-feature-idea.md  asset-counting-audit.md  asset-counting-design.md  asset-counting-plan.md  asset-counting-refactor-plan.md  asset-counting-review-2026-07-18.md  bundler-architecture.md  cache-lifecycle-decision-log.md  known-issues.md  lean-orchestration-setup.md  logging-policy.md  release-checklist.md  release-setup-guide.md
docs/adr/: 0001-measure-a-neutral-build.md  0002-upstream-owns-everything-it-can-answer.md  0003-no-size-without-a-build.md  0004-import-lens-measures-imports-not-bundles.md  0005-a-runtime-is-an-artifact-boundary.md  0006-the-result-model.md
docs/reviews/: 2026-07-19-asset-counting-review.md  2026-07-19-extension-ui-review.md  README.md
extension/src/: config.ts  configChange.ts  configRefresh.ts  extension.ts  languages.ts  listener.ts  logger.ts  loggerCore.ts  watcher.ts  watcherActions.ts  watcherInvalidation.ts  workspaceContext.ts
extension/test/: configChange.test.ts  configRefresh.test.ts  languages.test.ts  loggerCore.test.ts  watcherActions.test.ts  watcherInvalidation.test.ts  workspaceContext.test.ts
media/: README.md
scripts/: accuracy-compare.mjs  assert-vsix-size.mjs  build-daemon.mjs  build-docker.ps1  bundle-externals.test.mjs  check-commit-msg.mjs  check-coverage.mjs  ci-matrix.mjs  compiler-stack-fingerprint.mjs  compiler-stack-helpers.mjs  compiler-stack.config.mjs  compiler-stack.fingerprint.json  copy-daemon.mjs  copy-daemon.ps1  daemon-hashes.mjs  daemon-hashes.test.mjs  dependency-policy.test.mjs  deps-update-safe.mjs  docker-build-entrypoint.sh  docker-build.mjs  docker-compose-config.test.mjs  extension-configuration.test.mjs  generate-changelog.mjs  generate-daemon-hashes.mjs  importlens-cli.test.mjs  oxc-stack-helpers.mjs  oxc-stack.config.mjs  package-target.mjs  package-vsix-manifest.mjs  package-vsix-manifest.test.mjs  package-vsix.mjs  performance-policy.test.mjs  prepare-candidate-fixtures.mjs  print-targets.mjs  publish-vsix.mjs  release-workflow.test.mjs  resolve-version.mjs  set-version.mjs  source-scan.mjs  targets.mjs  (+4 more)
scripts/accuracy-fixtures/: package.json  pnpm-lock.yaml
scripts/test/: asset-kind-contract.test.mjs  build-workflow.test.mjs  bundle-externals.test.mjs  check-commit-msg.test.mjs  ci-workflow.test.mjs  compiler-stack-coordination.test.mjs  daemon-hashes.test.mjs  daemon-path-contract.test.mjs  dependency-policy.test.mjs  deps-update-safe.test.mjs  docker-compose-config.test.mjs  engine-stage-coordination.test.mjs  extension-configuration.test.mjs  file-size-usability-coordination.test.mjs  generate-changelog.test.mjs  import-cost-naming-guards.test.mjs  importlens-cli.test.mjs  oxc-coordination.test.mjs  package-vsix-manifest.test.mjs  performance-policy.test.mjs  publish-vsix.test.mjs  release-guards.test.mjs  release-workflow.test.mjs  resolve-version.test.mjs  result-model-guards.test.mjs  set-version.test.mjs  targets.test.mjs  update-compiler-stack.test.mjs  update-oxc-stack.test.mjs  validate-workflow.test.mjs
skills/ci-cross-compilation/: SKILL.md
(+257 files in other folders)
