[package]
name = "import-lens-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "import-lens-daemon"
path = "src/main.rs"

[dependencies]
brotli = "^8"
bytes = "^1"
flate2 = "^1.1"
futures-util = { version = "^0.3", default-features = false, features = ["sink", "std"] }
httpdate = "^1"
oxc_allocator = "=0.139.0"
oxc_codegen = "=0.139.0"
oxc_minifier = "=0.139.0"
oxc_parser = "=0.139.0"
oxc_resolver = "=11.23.0"
oxc_semantic = "=0.139.0"
oxc_span = "=0.139.0"
oxc_syntax = "=0.139.0"
papaya = "^0.2"
rayon = "^1.12"
redb = "^4"
rmp-serde = "^1.3"
rolldown = "=1.1.5"
rolldown_common = "=1.1.5"
rolldown_error = "=1.1.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1.52", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "sync"] }
tokio-util = { version = "^0.7", features = ["codec"] }
ureq = { version = "^3.3", default-features = false, features = ["rustls"] }
xxhash-rust = { version = "^0.8", features = ["xxh3"] }
zstd = "^0.13"

[dev-dependencies]
zip = "^2"

[lints]
workspace = true
